# tsuru-sample

./: README.md  stack.yaml  test.hs  tsuru-sample.cabal
app/: Main.hs
iteratee-0.8.9.6/: iteratee.cabal  stack.yaml
iteratee-0.8.9.6/src/Data/Iteratee/: Base.hs
misc/: FileProcessing.hs
myiteratee/: myiteratee.cabal
myiteratee/src/Data/: MyIteratee.hs
src/: Attoparsec.hs  Base.hs  Builder.hs  Helpers.hs  Iter.hs  Iteratee.hs  MyIteratee.hs  Quote.hs
src/MyIteratee/: MyIteratee.hs  QuoteParsing.hs
src/Parsing/: Attoparsec.hs  Base.hs  ByteString.hs  Iteratee.hs
src/Streaming/: Iteratee.hs  MyIteratee.hs
src/Streaming/Builder/: Quote.hs  UTCTime.hs
