name:                tsuru-sample
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/tsuru-sample#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable tsuru-sample-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -Wincomplete-patterns
                       -Wno-partial-type-signatures
  build-depends:       base
                     , tsuru-sample
                     , time
                     , iteratee
                     , bytestring
                     , pcap
                     , ListLike
                     , containers
                     , attoparsec
                     , optparse-applicative
  default-language:    Haskell2010

executable tsuru-sample-exe-profiled
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-s
                       -Wincomplete-patterns
                       -Wno-partial-type-signatures
  build-depends:       base
                     , tsuru-sample
                     , time
                     , iteratee
                     , bytestring
                     , pcap
                     , ListLike
                     , containers
                     , attoparsec
                     , optparse-applicative
  default-language:    Haskell2010

test-suite tsuru-sample-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tsuru-sample
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/tsuru-sample
