name:                myiteratee
version:             0.1.0.0
synopsis:            An implementation of Oleg Kiselyov's iteratee
description:         Please see README.md
-- homepage:
license:             BSD3
license-file:        LICENSE
author:              Leo Tingchen Hsu
maintainer:          iteloo@gmail.com
copyright:           2016 Leo Tingchen Hsu
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.MyIteratee
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

test-suite myiteratee-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , myiteratee
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

-- source-repository head
--   type:     git
--   location: https://github.com/githubuser/myiteratee
